--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,6 +1,41 @@
 <article class="example" id="uk">
   <h1>HTML-partials</h1>
 
+  <form class="search-form" id="search-form">
+    <input
+      type="text"
+      name="searchQuery"
+      autocomplete="off"
+      placeholder="Search images..."
+    />
+    <button type="submit">Search</button>
+  </form>
+
+<div class="gallery">
+  <!-- Obraz karty -->
+<div class="photo-card">
+  <img src="" alt="" loading="lazy" />
+  <div class="info">
+    <p class="info-item">
+      <b>Likes</b>
+    </p>
+    <p class="info-item">
+      <b>Views</b>
+    </p>
+    <p class="info-item">
+      <b>Comments</b>
+    </p>
+    <p class="info-item">
+      <b>Downloads</b>
+    </p>
+  </div>
+</div>
+
+</div>
+
+<button type="button" class="load-more">Load more</button>
+
+
   <!--
     ❗️❗️❗️ The path to images from the HTML partial
     is the same as from the index.html file
