--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,31 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+.gallery{
+    display: flex;
+ flex-wrap: wrap;
+  gap: 10px;
+    margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.photo-card {
+  display: block;
+  flex-basis: calc((100% - 3 * 10px) / 4);
+  gap: 10px;
+ flex-direction: column;
+//   justify-content: space-evenly;
+//   max-width: 60px;
+}
+
+.info {
+  display: flex;
+//   flex-direction: row;
+//    justify-content: space-evenly;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+}
+
