--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,31 +1,49 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
-.gallery{
-    display: flex;
- flex-wrap: wrap;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+}
+
+.search-form {
+  align-self: center;
+  padding: 10px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-    margin-left: auto;
+  margin-left: auto;
   margin-right: auto;
-  
 }
 
 .photo-card {
-  display: block;
   flex-basis: calc((100% - 3 * 10px) / 4);
   gap: 10px;
- flex-direction: column;
-//   justify-content: space-evenly;
-//   max-width: 60px;
+  display: block;
+  flex-direction: column;
+  border: 1px solid #eeeeee;
+}
+
+img {
+  display: block;
 }
 
 .info {
   display: flex;
-//   flex-direction: row;
-//    justify-content: space-evenly;
+  padding: 10px;
 }
 
 .info-item {
   display: flex;
   flex-direction: column;
+  padding: 10px;
 }
 
+.load-more {
+  margin: 10px;
+}
